<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_crop"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/full_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_below="@+id/appCompatImageView"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/full_name"
        android:maxLines="1"
        android:textColorHint="@color/colorBlue"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxStrokeColor="@color/colorBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_full_name"
            style="@style/Theme.MaterialComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person"
            android:shadowColor="@color/colorBlue"
            android:textColor="@color/colorBlue"
            android:textColorHint="@color/colorBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_below="@+id/full_name"
        android:hint="@string/email_address_registration"
        android:maxLines="1"
        android:textColorHint="@color/colorBlue"
        app:boxBackgroundColor="@android:color/white"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxStrokeColor="@color/colorBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_email_address"
            style="@style/Theme.MaterialComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_mail_outline"
            android:shadowColor="@color/colorBlue"
            android:textColor="@color/colorBlue"
            android:textColorHint="@color/colorBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_below="@+id/email_address"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="47dp"
        android:hint="@string/password_registration"
        android:maxLines="1"
        android:textColorHint="@color/colorBlue"
        app:boxBackgroundColor="@android:color/white"
        app:boxCornerRadiusBottomEnd="32dp"
        app:boxCornerRadiusTopEnd="32dp"
        app:boxStrokeColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_password"
            style="@style/Theme.MaterialComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:drawableEnd="@drawable/ic_lock_open"
            android:shadowColor="@color/colorBlue"
            android:textColor="@color/colorBlue"
            android:textColorHint="@color/colorBlue" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_success"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/bg_support_successful" />

</RelativeLayout>