...
            android:textColorHint="@color/colorBlue"
            android:layout_alignParentBottom="true"
            android:drawableEnd="@drawable/ic_lock_open" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/view_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="48dp"
...
